# captainofthesea

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2023_07_18_1017-1f674ec3dca5_empty.py  2023_07_19_0058-e784f0db5146_add_player_table.py  2023_07_19_0959-62be41444cf0_add_player_table.py
backend/api/: endpoints.py
backend/api/dependencies/: repository.py  session.py
backend/api/endpoint/: player.py
backend/api/routes/: player.py
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/api/dependencies/: repository.py
backend/app/api/routes/: health.py
backend/app/api/routes/v1/: player.py
backend/app/config/settings/: base.py
backend/app/crud/: base.py  player.py
backend/app/models/db/: __init__.py  player.py
backend/app/models/schemas/: player.py
backend/app/repository/: database.py  events.py  table.py
backend/business/entity/: player.py
backend/config/: events.py  manager.py
backend/config/settings/: .setings.py  base.py  development.py  production.py  staging.py
backend/crud/: player.py
backend/models/: player.py
backend/models/db/: player.py
backend/models/schemas/: base.py  player.py
backend/repository/: database.py  events.py  player.py  table.py
envs/: backend-local.env  local.env
infra-aws/: ecs.tf  load-balancer.tf  network.tf  parameter_store.tf  policies.tf  roles.tf  security-group.tf
infra-azure/: aks.tf  providers.tf  resource-group.tf  vars.tf
(+18 files in other folders)
