[tool.poetry]
name = "captainofthesea"
version = "0.1.0"
description = ""
authors = ["Vieira, Joao <jvr.vieira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
