[tool.poetry]
name = "captainofthesea"
version = "0.1.0"
description = ""
authors = ["Vieira, Joao <jvr.vieira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"
fastapi = "0.96.1"
sqlmodel = "^0.0.8"
alembic = "1.9.2"
sqladmin = "^0.13.0"
uvicorn = "^0.23.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
